--- a/index.html
+++ b/index.html
@@ -80,18 +80,64 @@
   <div id="about" class="page">
     <h2>About</h2>
     <p>Welcome to the Snake Game! This game is a simple and fun implementation of the classic snake game. The goal is to eat the red squares and grow your snake as long as possible without hitting the walls or yourself.</p>
+    p>In Snake Game, you control a growing snake that moves around the screen to collect food. The objective is to eat as much food as possible without colliding with the walls or the snake's own body. As the snake consumes food, it grows longer, making the game progressively more challenging.</p>
+<p><b>Features</b></p>
+<ul>
+    <li>Simple yet engaging gameplay</li>
+    <li>Responsive design for seamless play on desktop and mobile devices</li>
+    <li>Smooth animations and intuitive controls</li>
+    <li>Increasing difficulty as the snake grows</li>
+    <li>No downloads required – play directly in your browser</li>
+</ul>
+<p><b>How to Play</b></p>
+<ul>
+    <li>Use arrow keys to navigate the snake.</li>
+    <li>Collect food to increase your score and make the snake longer.</li>
+    <li>Avoid crashing into walls or your own body to stay in the game.</li>
+    <li>Challenge yourself to achieve the highest score possible!</li>
+</ul>
+<p><b>Why Play Snake Game?</b></p>
+<p>Snake Game is a timeless classic that tests your reflexes and strategic thinking. Whether you're looking for a quick break or aiming to beat your own high score, this game offers an enjoyable and rewarding experience for players of all ages.</p>
+<p>Enjoy playing Snake Game and see how long you can survive!</p>
   </div>
 
   <div id="privacy" class="page">
     <h2>Privacy Policy</h2>
-    <p>Your privacy is important to us. This game does not collect any personal information from its users.</p>
+    <p>Thank you for playing Snake Game. Your privacy is important to us. This Privacy Policy explains how we collect, use, and protect your information when you play our game.</p>
+<p><b>1. Information We Collect</b></p>
+<p>Snake Game does not collect, store, or share any personal information from users. However, we may collect non-personal data such as gameplay statistics, device type, and browser version to improve game performance and user experience.</p>
+<p><b>2. Use of Collected Information</b></p>
+<p>Any collected non-personal data is used solely for improving the game, fixing bugs, and enhancing user experience. We do not sell, trade, or share your information with third parties.</p>
+<p><b>3. Cookies and Tracking Technologies</b></p>
+<p>Snake Game may use cookies or similar technologies to enhance gameplay experience. These cookies are used for maintaining game settings and preferences. You can disable cookies in your browser settings, but some game features may not function properly.</p>
+<p><b>4. Third-Party Services</b></p>
+<p>Our game may contain links to third-party websites or services that are not operated by us. We are not responsible for the privacy practices of these third parties. Please review their privacy policies before interacting with them.</p>
+<p><b>5. Children's Privacy</b></p>
+<p>Snake Game does not knowingly collect personal information from children under the age of 13. If we discover that we have inadvertently collected such information, we will take steps to delete it promptly.</p>
+<p><b>6. Changes to This Privacy Policy</b></p>
+<p>We reserve the right to update this Privacy Policy at any time. Any changes will be posted on this page, and we encourage you to review it periodically.</p>
+<p><b>7. Contact Us</b></p>
+<p>If you have any questions or concerns about this Privacy Policy, please contact us at infoblogevancom@gmail.com.</p>
   </div>
 
   <div id="disclaimer" class="page">
     <h2>Disclaimer</h2>
-    <p>This game is provided "as is" without any guarantees or warranty. Play at your own risk.</p>
+    <p>All the information on this website is published in good faith and for general information purpose only. https://personalinjurylawyer.pages.dev does not make any warranties about the completeness, reliability and accuracy of this information. Any action you take upon the information you find on this website (https://personalinjurylawyer.pages.dev), is strictly at your own risk. https://personalinjurylawyer.pages.dev will not be liable for any losses and/or damages in connection with the use of our website.</p>
+<p>From our website, you can visit other websites by following hyperlinks to such external sites. While we strive to provide only quality links to useful and ethical websites, we have no control over the content and nature of these sites. These links to other websites do not imply a recommendation for all the content found on these sites. Site owners and content may change without notice and may occur before we have the opportunity to remove a link which may have gone 'bad'.</p>
+<p>Please be also aware that when you leave our website, other sites may have different privacy policies and terms which are beyond our control. Please be sure to check the Privacy Policies of these sites as well as their "Terms of Service" before engaging in any business or uploading any information.</p>
+<p><b>1. General Disclaimer</b></p>
+<p>Snake Game is provided on an "as-is" basis without any warranties of any kind, either express or implied. The developers make no guarantees regarding the accuracy, reliability, or availability of the game.</p>
+<p><b>2. Limitation of Liability</b></p>
+<p>Under no circumstances shall the developers or affiliates be liable for any direct, indirect, incidental, consequential, or special damages arising out of or in connection with the use of Snake Game. This includes but is not limited to loss of data, hardware damage, or other losses.</p>
+<p><b>3. Gameplay Experience</b></p>
+<p>While we strive to provide an enjoyable and seamless gaming experience, we do not guarantee that the game will be error-free, uninterrupted, or free from technical issues. Players use the game at their own risk.</p>
+<p><b>4. Third-Party Links and Content</b></p>
+<p>Snake Game may contain links to third-party websites or services that are not controlled by us. We do not endorse or assume responsibility for any third-party content, privacy policies, or practices.</p>
+<p><b>5. Changes to the Disclaimer</b></p>
+<p>We reserve the right to modify this Disclaimer at any time without prior notice. Any changes will be updated on this page, and it is the responsibility of the user to review it periodically.</p>
+<p><b>6. Contact Us</b></p>
+<p>If you have any questions or concerns regarding this Disclaimer, please contact us at infoblogevancom@gmail.com.</p>
   </div>
-
   <footer>
     <p>&copy; 2025 Snake Game. All rights reserved.</p>
   </footer>
